Add ability to override context menu in the sidebar

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -17,7 +17,8 @@
   ],
   "optional_permissions": [
     "<all_urls>",
-    "bookmarks"
+    "bookmarks",
+    "menus.overrideContext"
   ],
   "icons": {
     "16": "resources/16x16.svg",
