Search dropped non-URL text by default search engine #1527

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -18,7 +18,8 @@
   "optional_permissions": [
     "<all_urls>",
     "bookmarks",
-    "menus.overrideContext"
+    "menus.overrideContext",
+    "search"
   ],
   "icons": {
     "16": "resources/16x16.svg",
