--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
+  "devDependencies": {
     "eslint": "^5.0.1",
     "eslint-plugin-import": "^2.13.0",
     "babel-core": "^6.0.0",
