--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -19,7 +19,8 @@
   ],
   "optional_permissions": [
     "<all_urls>",
-    "bookmarks"
+    "bookmarks",
+    "tabHide"
   ],
   "icons": {
     "16": "resources/16x16.svg",
