--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -23,44 +23,44 @@
     "tabHide"
   ],
   "icons": {
-    "16": "resources/16x16.svg",
-    "20": "resources/20x20.svg",
-    "24": "resources/24x24.svg",
-    "32": "resources/32x32.svg",
-    "64": "resources/icon64.png",
-    "94": "resources/icon94.png"
+    "16": "/resources/16x16.svg",
+    "20": "/resources/20x20.svg",
+    "24": "/resources/24x24.svg",
+    "32": "/resources/32x32.svg",
+    "64": "/resources/icon64.png",
+    "94": "/resources/icon94.png"
   },
   "variable_color_icons": {
-    "16": "resources/16x16.svg",
-    "20": "resources/20x20.svg",
-    "24": "resources/24x24.svg",
-    "32": "resources/32x32.svg"
+    "16": "/resources/16x16.svg",
+    "20": "/resources/20x20.svg",
+    "24": "/resources/24x24.svg",
+    "32": "/resources/32x32.svg"
   },
   "background": {
-    "page": "background/background.html"
+    "page": "/background/background.html"
   },
   "browser_action": {
     "default_title": "__MSG_sidebarTitle__",
     "browser_style": true,
     "theme_icons": [
       {
-        "light": "resources/16x16-dark.svg#toolbar",
-        "dark":  "resources/16x16-light.svg#toolbar",
+        "light": "/resources/16x16-dark.svg#toolbar",
+        "dark":  "/resources/16x16-light.svg#toolbar",
         "size": 16
       },
       {
-        "light": "resources/20x20-dark.svg#toolbar",
-        "dark":  "resources/20x20-light.svg#toolbar",
+        "light": "/resources/20x20-dark.svg#toolbar",
+        "dark":  "/resources/20x20-light.svg#toolbar",
         "size": 20
       },
       {
-        "light": "resources/24x24-dark.svg#toolbar",
-        "dark":  "resources/24x24-light.svg#toolbar",
+        "light": "/resources/24x24-dark.svg#toolbar",
+        "dark":  "/resources/24x24-light.svg#toolbar",
         "size": 24
       },
       {
-        "light": "resources/32x32-dark.svg#toolbar",
-        "dark":  "resources/32x32-light.svg#toolbar",
+        "light": "/resources/32x32-dark.svg#toolbar",
+        "dark":  "/resources/32x32-light.svg#toolbar",
         "size": 32
       }
     ]
@@ -68,12 +68,12 @@
   "sidebar_action": {
     "default_title": "__MSG_sidebarTitle__",
     "default_icon": {
-      "16": "resources/16x16-light.svg",
-      "20": "resources/20x20-light.svg",
-      "24": "resources/24x24-light.svg",
-      "32": "resources/32x32-light.svg"
+      "16": "/resources/16x16-light.svg",
+      "20": "/resources/20x20-light.svg",
+      "24": "/resources/24x24-light.svg",
+      "32": "/resources/32x32-light.svg"
     },
-    "default_panel": "sidebar/sidebar.html",
+    "default_panel": "/sidebar/sidebar.html",
     "browser_style": true
   },
   "commands": {
@@ -184,11 +184,11 @@
     }
   },
   "options_ui": {
-    "page": "options/options.html",
+    "page": "/options/options.html",
     "browser_style": true
   },
   "web_accessible_resources": [
-    "resources/group-tab.html*"
+    "/resources/group-tab.html*"
   ],
   "default_locale": "en",
   "applications": {
