Added "Reload Sidebars" to context menus
Note: May need translation still for non-English languages (though added fallback to use English in those cases)

--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -164,6 +164,9 @@
     "focusFirstChild": {
       "description": "__MSG_command_focusFirstChild__"
     },
+    "reloadSidebars": {
+      "description": "__MSG_command_reloadSidebars__"
+    },
     "tabbarUp": {
       "description": "__MSG_command_tabbarUp__ (Alt+Shift+Up)"
     },
