--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -8,10 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint": "^5.0.1",
-    "eslint-plugin-import": "^2.13.0",
     "babel-core": "^6.0.0",
     "babel-plugin-module-resolver": "^3.0.0",
-    "eslint-import-resolver-babel-module": "^4.0.0"
+    "eslint": "^5.16.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-import": "^2.17.2"
   }
 }
