--- a/webextensions/manifest.json
+++ b/webextensions/manifest.json
@@ -211,6 +211,11 @@
   "web_accessible_resources": [
     "/resources/group-tab.html*"
   ],
+  "protocol_handlers": [
+    { "protocol":    "ext+treestyletab",
+      "name":        "Tree Style Tab",
+      "uriTemplate": "/resources/protocol-handler.html?%s" }
+  ],
   "default_locale": "en",
   "applications": {
     "gecko": {
