--- a/webextensions/package.json
+++ b/webextensions/package.json
@@ -13,6 +13,7 @@
     "eslint": "^5.16.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
     "eslint-plugin-import": "^2.17.2",
+    "jsonlint": "*",
     "lodash": ">=4.17.13"
   }
 }
