--- a/webextensions/Makefile
+++ b/webextensions/Makefile
@@ -12,11 +12,7 @@ install_dependency:
 
 lint:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives
-	find . -type d -name node_modules -prune -o -type f -name '*.json' -print | \
-	  while read path; \
-	  do \
-	    "$(NPM_BIN_DIR)/jsonlint" -q "$$path" || exit 1; \
-	  done
+	find . -type d -name node_modules -prune -o -type f -name '*.json' -print | xargs "$(NPM_BIN_DIR)/jsonlint-cli"
 
 format:
 	$(NPM_BIN_DIR)/eslint . --ext=.js --report-unused-disable-directives --fix
